<resources>
    <string name="app_name">My Application</string>
    <string name="started_title">hello World</string>
    <string name="started_sub_title">texte value for testion ologin and logouttexte value for testion ologin and logouttexte value for testion ologn and logouttexte value for</string>
    <string name="register">register</string>
    <string name="login" />
    <string name="login_title">login to app</string>

    <string name="login_sub_title">

        <font color="#00C9B8"><b>login</b></font>
        if you already have an account
    </string>
    <string name="your_email_or_username">your email or username</string>
    <string name="your_password">pwd</string>
    <string name="forget_yout_pasword">forget yout pasword?</string>
    <string name="login_you_havent_account">
        i don\'t have account
        <font color="#00C9B8"><b>Register</b></font>
    </string>
    <string name="Register_you_havent_account">
      I already have an account:
        <font color="#00C9B8"><b>Login</b></font>
    </string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register_title">create your Account !</string>

    <string name="register_sub_title">

        <font color="#00C9B8"><b>Regiser</b></font>
       to get started with the app !
    </string>
    <string name="CreateAccount">Create an account !</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>